--- a/portfolio.html
+++ b/portfolio.html
@@ -235,6 +235,33 @@
       updateCarousel('next');
     });
   });
+    // IMAGE MODAL
+const modal      = document.getElementById('image-modal');
+const modalImg   = document.getElementById('modal-img');
+const closeIcon  = document.querySelector('.modal-close');
+
+// Open modal when any View Image button is clicked
+document.querySelectorAll('.view-image-btn').forEach(btn => {
+  btn.addEventListener('click', () => {
+    // the <img> immediately before the button
+    const img = btn.previousElementSibling;
+    modalImg.src = img.src;
+    modal.style.display = 'flex';
+  });
+});
+
+// Close modal on X click
+closeIcon.addEventListener('click', () => {
+  modal.style.display = 'none';
+});
+
+// Also close if user clicks outside the image
+modal.addEventListener('click', (e) => {
+  if (e.target === modal) {
+    modal.style.display = 'none';
+  }
+});
+
   </script>
 </body>
 </html>
