--- a/portfolio.html
+++ b/portfolio.html
@@ -22,98 +22,129 @@
   <!-- Your main stylesheet -->
   <link rel="stylesheet" href="style.css"/>
 
-  <!-- Carousel-specific CSS -->
+  <!-- Carousel + Modal CSS overrides -->
   <style>
-  .project-carousel { max-width: 800px; margin: 0 auto; position: relative; }
-  .project-indicator { text-align: center; margin-bottom: 1rem; color: var(--clr-primary); }
-  .carousel-viewport { overflow: hidden; position: relative; }
-  .carousel-track {
-    display: flex;
-    transition: transform 0.6s ease;
-  }
-  .carousel-track .project {
-    flex: 0 0 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2rem;
-  }
-  .project-info { flex: 1; text-align: left; }
-  .project-number {
-    font-size: 2.5rem;
-    color: var(--clr-primary);
-    margin-bottom: 0.5rem;
-  }
-  .carousel-track img {
-    flex: 1;
-    max-width: 45%;
-    border-radius: 8px;
-  }
-  .carousel-controls {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    display: flex;
-    gap: 0.5rem;
-  }
-  .carousel-controls button {
-    background: var(--clr-primary);
-    border: none;
-    padding: 0.4rem 0.8rem;
-    border-radius: 4px;
-    color: var(--clr-dark);
-    font-size: 1.2rem;
-    cursor: pointer;
-    transition: background 0.3s;
-  }
-  .carousel-controls button:hover {
-    background: var(--clr-light);
-  }
-  .project-carousel.fade-in {
-    opacity: 0;
-    animation: fadeIn 0.8s forwards 1.2s;
-  }
-  @keyframes fadeIn {
-    to { opacity: 1; }
-  }
-    /* — Adjust carousel viewport & slide size — */
-.carousel-viewport {
-  position: relative;
-  padding-bottom: 3.5rem;   /* room for controls below */
-}
+    /* Carousel container */
+    .project-carousel { max-width: 900px; margin: 2rem auto; position: relative; }
 
-.carousel-track .project {
-  min-height: 400px;         /* make slide taller */
-  padding: 2rem;             /* extra breathing room */
-}
+    /* Text panel */
+    .project-info { flex: 1; text-align: left; }
+    .project-number {
+      font-size: 2.5rem;
+      color: var(--clr-primary);
+      margin-bottom: 0.5rem;
+    }
 
-/* Info (left) a bit wider, image (right) a bit larger */
-.project-info {
-  flex: 1.2;
-}
-.carousel-track img {
-  flex: 1;
-  max-width: 50%;
-}
+    /* View Image button */
+    .view-image-btn {
+      position: absolute;
+      bottom: 1rem;
+      left: 50%;
+      transform: translateX(-50%);
+      background: var(--clr-primary);
+      border: none;
+      color: var(--clr-dark);
+      padding: 0.5rem 1rem;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background 0.3s, transform 0.2s;
+      z-index: 1;
+    }
+    .view-image-btn:hover {
+      background: var(--clr-light);
+      transform: translateX(-50%) scale(1.05);
+    }
 
-/* — Position arrows at bottom-right — */
-.carousel-controls {
-  position: absolute;
-  bottom: 1rem;
-  right: 1rem;
-  top: auto;                 /* override previous top:1rem */
-}
+    /* Carousel viewport & track */
+    .carousel-viewport { overflow: hidden; height: 600px; position: relative; }
+    .carousel-track {
+      display: flex;
+      transition: transform 0.6s ease;
+      height: 100%;
+    }
+    .carousel-track .project {
+      flex: 0 0 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: relative;
+      padding: 2rem;
+    }
 
-/* (Optional) Slight hover pop for arrow buttons */
-.carousel-controls button:hover {
-  transform: scale(1.1);
-}
+    /* Enlarged, cover Images, no “book” effect */
+    .carousel-track .project img {
+      flex: 1 0 80%;
+      max-width: 80%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      background: none !important;
+      box-shadow: none !important;
+      border-radius: 8px;
+    }
+
+    /* Prev/Next controls under image */
+    .carousel-controls {
+      position: absolute;
+      bottom: 1rem;
+      right: 1rem;
+      display: flex;
+      gap: 0.5rem;
+      z-index: 2;
+    }
+    .carousel-controls button {
+      background: var(--clr-primary);
+      border: none;
+      padding: 0.4rem 0.8rem;
+      border-radius: 4px;
+      color: var(--clr-dark);
+      font-size: 1.2rem;
+      cursor: pointer;
+      transition: background 0.3s, transform 0.2s;
+    }
+    .carousel-controls button:hover {
+      background: var(--clr-light);
+      transform: scale(1.1);
+    }
+
+    /* Fade-in after open-paper */
+    .project-carousel { opacity: 0; }
+    .project-carousel.fade-in {
+      animation: fadeIn 0.8s forwards 1.2s;
+    }
+    @keyframes fadeIn { to { opacity: 1; } }
+
+    /* Modal overlay */
+    .image-modal {
+      display: none;
+      position: fixed; top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      backdrop-filter: blur(8px);
+      align-items: center; justify-content: center;
+      z-index: 5000;
+    }
+    .image-modal img {
+      max-width: 90%; max-height: 90%;
+      border-radius: 4px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+    }
+    .modal-close {
+      position: absolute;
+      top: 1.5rem; right: 1.5rem;
+      font-size: 2.5rem;
+      color: #fff;
+      cursor: pointer;
+      z-index: 5001;
+    }
   </style>
 </head>
 <body>
 
   <!-- Loader Overlay -->
-  <div id="loader"><div class="loader-spinner"></div></div>
+  <div id="loader">
+    <div class="loader-spinner"></div>
+  </div>
 
   <!-- Page Content -->
   <div id="page-content">
@@ -152,6 +183,7 @@
                 <p>Single-page app with smooth animations.</p>
               </div>
               <img src="Images/delivery platform dashboard.jpeg" alt="Food Delivery"/>
+              <button class="view-image-btn">View Image</button>
             </div>
             <!-- Slide 2 -->
             <div class="project">
@@ -161,6 +193,7 @@
                 <p>Interactive dashboard with charts &amp; graphs.</p>
               </div>
               <img src="Images/recruitment platform landing page.jpeg" alt="Recruitment Platform"/>
+              <button class="view-image-btn">View Image</button>
             </div>
             <!-- Slide 3 -->
             <div class="project">
@@ -170,6 +203,7 @@
                 <p>E-commerce site with shopping cart.</p>
               </div>
               <img src="Images/sanbot.jpeg" alt="Sanbot – API"/>
+              <button class="view-image-btn">View Image</button>
             </div>
           </div>
           <!-- Controls -->
@@ -182,86 +216,88 @@
     </section>
 
     <!-- Footer -->
-    <footer><p>&copy; 2025 Ameed Shubietah. All rights reserved.</p></footer>
+    <footer>
+      <p>&copy; 2025 Ameed Shubietah. All rights reserved.</p>
+    </footer>
   </div><!-- /#page-content -->
+
+  <!-- Image preview modal -->
+  <div id="image-modal" class="image-modal">
+    <span class="modal-close">&times;</span>
+    <img id="modal-img" src="" alt="Full Image">
+  </div>
 
   <!-- Typed.js (if used) -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <!-- Global JS (mobile menu, etc.) -->
+  <!-- Global JS (mobile menu) -->
   <script src="script.js"></script>
 
-  <!-- Inline Carousel + Loader/Open-Paper -->
+  <!-- Inline: Loader, Carousel & Modal JS -->
   <script>
-  // Mobile menu toggle
-  const menuBtn = document.getElementById('mobile-menu');
-  const navList = document.querySelector('.nav-list');
-  menuBtn.addEventListener('click', () => {
-    navList.classList.toggle('active');
-    menuBtn.classList.toggle('open');
-  });
-
-  window.addEventListener('load', () => {
-    // hide loader, open-paper, then fade-in carousel
-    setTimeout(() => {
-      document.getElementById('loader').style.display = 'none';
-      document.getElementById('page-content').classList.add('open-paper');
-      document.querySelector('.project-carousel').classList.add('fade-in');
-    }, 1200);
-
-    // init carousel
-    const track    = document.querySelector('.carousel-track');
-    const slides   = Array.from(track.children);
-    const totalEl  = document.getElementById('total');
-    const currentEl= document.getElementById('current');
-    const prevBtn  = document.getElementById('prev');
-    const nextBtn  = document.getElementById('next');
-    let currentIndex = 0;
-
-    totalEl.textContent = slides.length.toString().padStart(2,'0');
-    track.style.transform = 'translateX(0)';
-
-    function updateCarousel(dir) {
-      // update index & slide
-      track.style.transform = `translateX(-${currentIndex * 100}%)`;
-      currentEl.textContent = (currentIndex+1).toString().padStart(2,'0');
-    }
-
-    prevBtn.addEventListener('click', () => {
-      currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-      updateCarousel('prev');
+    // Mobile toggle
+    const menuBtn = document.getElementById('mobile-menu');
+    const navList = document.querySelector('.nav-list');
+    menuBtn.addEventListener('click', () => {
+      navList.classList.toggle('active');
+      menuBtn.classList.toggle('open');
     });
-    nextBtn.addEventListener('click', () => {
-      currentIndex = (currentIndex + 1) % slides.length;
-      updateCarousel('next');
+
+    window.addEventListener('load', () => {
+      // 1) Loader → open-paper → fade-in carousel
+      setTimeout(() => {
+        document.getElementById('loader').style.display = 'none';
+        document.getElementById('page-content').classList.add('open-paper');
+        document.querySelector('.project-carousel').classList.add('fade-in');
+      }, 1200);
+
+      // 2) Carousel logic
+      const track    = document.querySelector('.carousel-track');
+      const slides   = Array.from(track.children).filter(el => el.classList.contains('project'));
+      const totalEl  = document.getElementById('total');
+      const currentEl= document.getElementById('current');
+      const prevBtn  = document.getElementById('prev');
+      const nextBtn  = document.getElementById('next');
+      let idx = 0;
+
+      totalEl.textContent = slides.length.toString().padStart(2,'0');
+      track.style.transform = 'translateX(0)';
+
+      function updateCarousel() {
+        track.style.transform = `translateX(-${idx * 100}%)`;
+        currentEl.textContent = (idx+1).toString().padStart(2,'0');
+      }
+
+      prevBtn.addEventListener('click', () => {
+        idx = (idx - 1 + slides.length) % slides.length;
+        updateCarousel();
+      });
+      nextBtn.addEventListener('click', () => {
+        idx = (idx + 1) % slides.length;
+        updateCarousel();
+      });
+
+      updateCarousel();
+
+      // 3) Modal logic
+      const modal     = document.getElementById('image-modal');
+      const modalImg  = document.getElementById('modal-img');
+      const closeIcon = document.querySelector('.modal-close');
+
+      document.querySelectorAll('.view-image-btn').forEach(btn => {
+        btn.addEventListener('click', () => {
+          const img = btn.previousElementSibling;
+          modalImg.src = img.src;
+          modal.style.display = 'flex';
+        });
+      });
+
+      closeIcon.addEventListener('click', () => {
+        modal.style.display = 'none';
+      });
+      modal.addEventListener('click', e => {
+        if (e.target === modal) modal.style.display = 'none';
+      });
     });
-  });
-    // IMAGE MODAL
-const modal      = document.getElementById('image-modal');
-const modalImg   = document.getElementById('modal-img');
-const closeIcon  = document.querySelector('.modal-close');
-
-// Open modal when any View Image button is clicked
-document.querySelectorAll('.view-image-btn').forEach(btn => {
-  btn.addEventListener('click', () => {
-    // the <img> immediately before the button
-    const img = btn.previousElementSibling;
-    modalImg.src = img.src;
-    modal.style.display = 'flex';
-  });
-});
-
-// Close modal on X click
-closeIcon.addEventListener('click', () => {
-  modal.style.display = 'none';
-});
-
-// Also close if user clicks outside the image
-modal.addEventListener('click', (e) => {
-  if (e.target === modal) {
-    modal.style.display = 'none';
-  }
-});
-
   </script>
 </body>
 </html>
