--- a/portfolio.html
+++ b/portfolio.html
@@ -52,28 +52,66 @@
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="section">
-      <h2 class="section-title">Portfolio</h2>
-      <div class="portfolio-container">
-        <div class="project">
-          <img src="Images/delivery platform dashboard.jpeg" alt="Project One">
+  <h2 class="section-title">Portfolio</h2>
+  <div class="carousel">
+
+    <!-- Slide 1 -->
+    <div class="slide active" data-index="1">
+      <div class="slide-info">
+        <div class="project-number">01</div>
+        <div class="project-desc">
           <h3>Food Delivery</h3>
           <p>Single-page app with smooth animations.</p>
-          <a href="project1.html" class="btn">View Details</a>
-        </div>
-        <div class="project">
-          <img src="Images/recruitment platform landing page.jpeg" alt="Project Two">
-          <h3>Recruitment Platform</h3>
-          <p>Interactive dashboard with charts &amp; graphs.</p>
-          <a href="project2.html" class="btn">View Details</a>
-        </div>
-        <div class="project">
-          <img src="Images/sanbot.jpeg" alt="Project Three">
-          <h3>Sanbot – API</h3>
-          <p>E-commerce site with shopping cart.</p>
-          <a href="project3.html" class="btn">View Details</a>
         </div>
       </div>
-    </section>
+      <div class="slide-image">
+        <img src="Images/delivery platform dashboard.jpeg" alt="Food Delivery Dashboard">
+        <button class="expand-btn">Expand</button>
+      </div>
+    </div>
+
+    <!-- Slide 2 -->
+    <div class="slide" data-index="2">
+      <div class="slide-info">
+        <div class="project-number">02</div>
+        <div class="project-desc">
+          <h3>Recruitment Platform</h3>
+          <p>Interactive dashboard with charts &amp; graphs.</p>
+        </div>
+      </div>
+      <div class="slide-image">
+        <img src="Images/recruitment platform landing page.jpeg" alt="Recruitment Platform">
+        <button class="expand-btn">Expand</button>
+      </div>
+    </div>
+
+    <!-- Slide 3 -->
+    <div class="slide" data-index="3">
+      <div class="slide-info">
+        <div class="project-number">03</div>
+        <div class="project-desc">
+          <h3>Sanbot – API</h3>
+          <p>E-commerce site with shopping cart.</p>
+        </div>
+      </div>
+      <div class="slide-image">
+        <img src="Images/sanbot.jpeg" alt="Sanbot API">
+        <button class="expand-btn">Expand</button>
+      </div>
+    </div>
+
+    <!-- Prev/Next controls -->
+    <button class="carousel-btn prev">&laquo; Prev</button>
+    <button class="carousel-btn next">Next &raquo;</button>
+  </div>
+</section>
+
+<!-- Lightbox overlay -->
+<div id="lightbox" class="hidden">
+  <button id="lightbox-close">&times;</button>
+  <img id="lightbox-img" src="" alt="Expanded project image">
+</div>
+
 
     <!-- Footer -->
     <footer>
