--- a/contact.html
+++ b/contact.html
@@ -51,16 +51,12 @@
     <!-- Contact Section -->
     <section id="contact" class="section">
       <h2 class="section-title">Contact Me</h2>
-      <form
-      action="mailto:ameedraqish@gmail.com" 
-      method="POST" 
-      enctype="text/plain" 
-      class="contact-form">
-        <input type="text"    placeholder="Your Name"    required>
-        <input type="email"   placeholder="Your Email"   required>
-        <textarea placeholder="Your Message" rows="5" required></textarea>
-        <button type="submit" class="btn">Send Message</button>
-      </form>
+      <a 
+      href="mailto:ameedraqish@gmail.com?subject=Message%20from%20Portfolio" 
+      class="btn"
+      >
+      Send Message
+      </a>
     </section>
 
     <!-- Footer -->
