--- a/contact.html
+++ b/contact.html
@@ -50,19 +50,30 @@
 
     <!-- Contact Section -->
     <section id="contact" class="section">
-      <h2 class="section-title">Contact Me</h2>
-      <form 
+  <h2 class="section-title">Contact Me</h2>
+  <div class="contact-card">
+    <form 
       action="mailto:ameedraqish@gmail.com" 
       method="POST" 
       enctype="text/plain" 
       class="contact-form"
-      >
-        <input type="text"    name="name"    placeholder="Your Name"    required>
-        <input type="email"   name="email"   placeholder="Your Email"   required>
-        <textarea             name="message" placeholder="Your Message" rows="5" required></textarea>
-        <button type="submit" class="btn">Send Message</button>
-      </form>
-    </section>
+    >
+      <div class="form-group">
+        <label for="name">Your Name</label>
+        <input id="name" type="text" name="name" placeholder="Jane Doe" required>
+      </div>
+      <div class="form-group">
+        <label for="email">Your Email</label>
+        <input id="email" type="email" name="email" placeholder="you@example.com" required>
+      </div>
+      <div class="form-group">
+        <label for="message">Your Message</label>
+        <textarea id="message" name="message" placeholder="How can I help you?" rows="5" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Send Message</button>
+    </form>
+  </div>
+</section>
 
     <!-- Footer -->
     <footer>
