--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,6 @@
   <h2 class="section-title">Contact Me</h2>
   <div class="contact-card">
     <form 
-      action="mailto:ameedraqish@gmail.com" 
-      method="POST" 
       enctype="text/plain" 
       class="contact-form"
     >
@@ -70,7 +68,7 @@
         <label for="message">Your Message</label>
         <textarea id="message" name="message" placeholder="How can I help you?" rows="5" required></textarea>
       </div>
-      <button type="submit" class="btn btn-primary">Send Message</button>
+      <button type="submit" class="btn btn-primary"><a href="https://wa.me/972595820527" target="_blank" aria-label="WhatsApp">Send Message</a></button>
     </form>
   </div>
 </section>
