--- a/contact.html
+++ b/contact.html
@@ -52,24 +52,38 @@
     <section id="contact" class="section">
   <h2 class="section-title">Contact Me</h2>
   <div class="contact-card">
-    <form 
-      enctype="text/plain" 
-      class="contact-form"
-    >
-      <div class="form-group">
-        <label for="name">Your Name</label>
-        <input id="name" type="text" name="name" placeholder="Jane Doe" required>
-      </div>
-      <div class="form-group">
-        <label for="email">Your Email</label>
-        <input id="email" type="email" name="email" placeholder="you@example.com" required>
-      </div>
-      <div class="form-group">
-        <label for="message">Your Message</label>
-        <textarea id="message" name="message" placeholder="How can I help you?" rows="5" required></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary"><a href="https://wa.me/972595820527" target="_blank" aria-label="WhatsApp">Send Message</a></button>
-    </form>
+    <form
+  action="https://formsubmit.co/ameedraqish@gmail.com"
+  method="POST"
+  class="contact-form"
+>
+  <!-- disable their captcha “are you human?” page -->
+  <input type="hidden" name="_captcha" value="false">
+
+  <!-- optional: set a custom email subject -->
+  <input type="hidden" name="_subject" value="New message from my portfolio site">
+
+  <!-- optional: redirect to a “thank you” page after sending -->
+  <!-- <input type="hidden" name="_next" value="https://yourdomain.com/thank-you.html"> -->
+
+  <div class="form-group">
+    <label for="name">Your Name</label>
+    <input id="name" type="text" name="name" placeholder="Jane Doe" required>
+  </div>
+
+  <div class="form-group">
+    <label for="email">Your Email</label>
+    <input id="email" type="email" name="email" placeholder="you@example.com" required>
+  </div>
+
+  <div class="form-group">
+    <label for="message">Your Message</label>
+    <textarea id="message" name="message" placeholder="How can I help you?" rows="5" required></textarea>
+  </div>
+
+  <button type="submit" class="btn btn-primary">Send Message</button>
+</form>
+
   </div>
 </section>
 
