--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
   <button type="submit" class="btn btn-primary">Send Message</button>
     <span class="or-text">OR</span>
     <a
-      href="https://wa.me/YOUR_PHONE_NUMBER"
+      href="https://wa.me/972595820527"
       target="_blank"
       rel="noopener"
       class="btn btn-whatsapp"
